2004-09-23  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* utils/support.h: ditto
	* utils/support.c: ditto
	* configure.in: add strlcpy and strlcat

2004-09-15  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/resample.c: Reimplement bounds cheking

2004-09-09  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/gtk_c.c (ctl_total_time): ditto.
	* interface/gtk_i.c (handle_input): Fix counter overflow
	  (fix for [timidity-bugs-en:00032])
	* NEWS: Fix typo.

2004-09-07  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* freq.c: mostly rewritten
	  New pitch and chord detection algorithm that is much more
	  robust and accurate than before.
	* sndfont.c (main): CFG_FOR_SF_SUPPORT_FFT related code
	  modified to work with new freq.c

2004-09-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c: add null_play_mode
	  (fix for [timidity-bugs-en:00031])
	* timidity/timidity.c (parse_opt_h): add prototype for
	  show_ao_device_info()
	* timidity/readmidi.c (check_midi_file): Fix to recognize .rmi & .mfi
	  (Fix for [timidity-bugs-en:00030])

2004-09-01  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c : Fix for linkage error in W32
	* utils/support.h (S_ISDIR): define S_ISDIR for platforms without
	  S_ISDIR
	* interface/xaw_i.c: avoid all-black file selector when tracer is
	  not enabled, thanks to hmh@debian.org

2004-08-28  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* playmidi.c (new_chorus_voice, new_chorus_voice_alternate):
	  v1 and v2 are now swapped correctly
	* playmidi.c (process_sysex_event):
	  many fixes to XG SYSEX parsing
	* readmidi.c: (parse_sysex_event_multi):
	  many fixes to XG SYSEX parsing
	* reverb.c (do_filter_lowpass1_stereo):
	  p->x1l and p->x1r are now properly updated

2004-08-22  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mix.c (next_stage):
	  Added bounds checking after scaling envelope rates when
	  opt_tva_attack and/or opt_tva_decay are enabled.  This fixes