@@ -92,33 +92,6 @@ static char *wrd_event2string(int id)
     return "";
 }
 
-static void print_ecmd(char *cmd, int *args, int narg)
-{
-    char *p;
-
-    p = (char *)new_segment(&tmpbuffer, MIN_MBLOCK_SIZE);
-    sprintf(p, "^%s(", cmd);
-
-    if(*args == WRD_NOARG)
-	strcat(p, "*");
-    else
-	sprintf(p + strlen(p), "%d", *args);
-    args++;
-    narg--;
-    while(narg > 0)
-    {
-	if(*args == WRD_NOARG)
-	    strcat(p, ",*");
-	else
-	    sprintf(p + strlen(p), ",%d", *args);
-	args++;
-	narg--;
-    }
-    strcat(p, ")");
-    ctl->cmsg(CMSG_INFO, VERB_VERBOSE, "%s", p);
-    reuse_mblock(&tmpbuffer);
-}
-
 static void wrdt_apply(int cmd, int wrd_argc, int wrd_args[])
 {
     char *p;
@@ -218,17 +191,19 @@ static void wrdt_apply(int cmd, int wrd_argc, int wrd_args[])
 	break;
       case WRD_MAG:
 	p = (char *)new_segment(&tmpbuffer, MIN_MBLOCK_SIZE);
-	strcpy(p, "@MAG(");
-	strcat(p, wrd_event2string(wrd_args[0]));
-	strcat(p, ",");
-	for(i = 1; i < 3; i++)
+        snprintf(p, MIN_MBLOCK_SIZE-1, "@MAG(%s", wrd_event2string(wrd_args[0]));
+        p[MIN_MBLOCK_SIZE-1] = '\0'; /* fail safe */
+	for(i = 1; i < 5; i++)
 	{
 	    if(wrd_args[i] == WRD_NOARG)
-		strcat(p, "*,");
-	    else
-		sprintf(p + strlen(p), "%d,", wrd_args[i]);
+		strncat(p, ",*", MIN_MBLOCK_SIZE - strlen(p) - 1);
+	    else {
+		char q[CHAR_BIT*sizeof(int)];
+		snprintf(q, sizeof(q)-1, ",%d", wrd_args[i]);
+		strncat(p, q, MIN_MBLOCK_SIZE - strlen(p) - 1);
+            }
 	}
-	sprintf(p + strlen(p), "%d,%d)", wrd_args[3], wrd_args[4]);
+        strncat(p, ")", MIN_MBLOCK_SIZE - strlen(p) - 1);
 	ctl->cmsg(CMSG_INFO, VERB_VERBOSE, "%s", p);
 	reuse_mblock(&tmpbuffer);
 	break;
@@ -238,10 +213,13 @@ static void wrdt_apply(int cmd, int wrd_argc, int wrd_args[])
 	break;
       case WRD_PAL:
 	p = (char *)new_segment(&tmpbuffer, MIN_MBLOCK_SIZE);
-	sprintf(p, "@PAL(%03x", wrd_args[0]);
-	for(i = 1; i < 17; i++)
-	    sprintf(p + strlen(p), ",%03x", wrd_args[i]);
-	strcat(p, ")");
+	snprintf(p, MIN_MBLOCK_SIZE, "@PAL(%03x", wrd_args[0]);
+	for(i = 1; i < 17; i++) {
+	    char q[5];
+	    snprintf(q, sizeof(q)-1, ",%03x", wrd_args[i]);
+	    strncat(p, q, MIN_MBLOCK_SIZE - strlen(p) - 1);
+	}
+	strncat(p, ")", MIN_MBLOCK_SIZE - strlen(p) - 1);
 	ctl->cmsg(CMSG_INFO, VERB_VERBOSE, "%s", p);
 	reuse_mblock(&tmpbuffer);
 	break;
