@@ -149,7 +149,7 @@ static const char *mme_error_code_string(MMRESULT err_code)
 
 static void audriv_err(const char *msg)
 {
-    strcpy(audriv_errmsg, msg);
+    strncpy(audriv_errmsg, msg, sizeof(audriv_errmsg) - 1);
     if(audriv_error_handler != NULL)
 	audriv_error_handler(audriv_errmsg);
 }
