@@ -140,6 +140,47 @@ extern void sry_encode_bindata( char *code, const char *org, int len);
 extern int sry_decode_bindata( char *data );
 extern int wrd_read_sherry;
 
+static inline void print_ecmd(char*, int*, int);
+#ifdef HAVE_STRINGS_H
+#include <strings.h>
+#elif defined HAVE_STRING_H
+#include <string.h>
+#endif
+#include <limits.h>
+#include "mblock.h"
+#include "controls.h"
+static inline void print_ecmd(char *cmd, int *args, int narg)
+{
+    char *p;
+    size_t s = MIN_MBLOCK_SIZE;
 
+    p = (char *)new_segment(&tmpbuffer, s);
+    snprintf(p, s, "^%s(", cmd);
+
+    if(*args == WRD_NOARG)
+	strncat(p, "*", s - strlen(p) - 1);
+    else {
+	char c[CHAR_BIT*sizeof(int)];
+	snprintf(c, sizeof(c)-1, "%d", args[0]);
+	strncat(p, c, s - strlen(p) - 1);
+    }
+    args++;
+    narg--;
+    while(narg > 0)
+    {
+	if(*args == WRD_NOARG)
+	    strncat(p, ",*", s - strlen(p) - 1);
+	else {
+	    char c[CHAR_BIT*sizeof(int)]; /* should be enough loong */
+	    snprintf(c, sizeof(c)-1, ",%d", args[0]);
+	    strncat(p, c, s - strlen(p) - 1);
+	}
+	args++;
+	narg--;
+    }
+    strncat(p, ")", s - strlen(p) - 1);
+    ctl->cmsg(CMSG_INFO, VERB_VERBOSE, "%s", p);
+    reuse_mblock(&tmpbuffer);
+}
 
 #endif /* ___WRD_H_ */
